# ChangeLog for media-libs/libao
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libao/ChangeLog,v 1.82 2008/05/26 15:30:46 drac Exp $

  26 May 2008; Samuli Suominen <drac@gentoo.org> libao-0.8.6-r3.ebuild,
  libao-0.8.8.ebuild:
  arm stable, revert back to ~mips (unstable deps)

  31 Jan 2008; nixnut <nixnut@gentoo.org> libao-0.8.8.ebuild:
  Stable on ppc wrt bug 2067682

  31 Jan 2008; Samuli Suominen <drac@gentoo.org> -libao-0.8.5.ebuild,
  -libao-0.8.6-r1.ebuild, -libao-0.8.6-r2.ebuild, libao-0.8.8.ebuild:
  amd64 stable wrt #207682

  30 Jan 2008; Raúl Porcel <armin76@gentoo.org> libao-0.8.8.ebuild:
  alpha/ia64/sparc stable wrt #207682

  30 Jan 2008; Dawid Węgliński <cla@gentoo.org> libao-0.8.8.ebuild:
  Stable on x86 (bug #207682)

  28 Jan 2008; Jeroen Roovers <jer@gentoo.org> libao-0.8.8.ebuild:
  Stable for HPPA (bug #207682).

  27 Jan 2008; Brent Baude <ranger@gentoo.org> libao-0.8.8.ebuild:
  Marking libao-0.8.8 ppc64 for bug 207682

*libao-0.8.8 (27 Nov 2007)

  27 Nov 2007; Samuli Suominen <drac@gentoo.org>
  +files/libao-0.8.8-alsa09-buffertime-milliseconds.patch,
  +libao-0.8.8.ebuild:
  Version bump wrt #200322, thanks to Rafał Mużyło for reporting.

  07 Nov 2007; Raúl Porcel <armin76@gentoo.org> libao-0.8.6-r3.ebuild:
  alpha stable

  07 Jul 2007; Raúl Porcel <armin76@gentoo.org> libao-0.8.6-r2.ebuild,
  libao-0.8.6-r3.ebuild:
  Add ~alpha wrt #149806 and stabilize -r2 wrt #180310

  02 Jun 2007; Joshua Kinard <kumba@gentoo.org> libao-0.8.6-r3.ebuild:
  Stable on mips.

  22 Apr 2007; Raúl Porcel <armin76@gentoo.org> libao-0.8.6-r3.ebuild:
  ia64 stable

  06 Feb 2007; Chris Gianelloni <wolf31o2@gentoo.org> libao-0.8.6-r3.ebuild:
  Stable on amd64 wrt bug #161149.

  27 Jan 2007; Joseph Jezak <josejx@gentoo.org> libao-0.8.6-r3.ebuild:
  Marked ppc stable for bug #161149.

  19 Jan 2007; Jeroen Roovers <jer@gentoo.org> libao-0.8.6-r3.ebuild:
  Stable for HPPA (bug #149806).
