@@ -1,9 +1,6 @@
 AUX libao-0.8.6-darwin.patch 1862 RMD160 cffde6cb45a0684daeb35d815d1b854bcb292e65 SHA1 49ac5bf35095f7cb603f03fcd950ba452812e1fc SHA256 bc01957414807adf2e82696451808549a5bed3e9ab0e605352cdd4593d58cca4
 AUX libao-0.8.8-alsa09-buffertime-milliseconds.patch 554 RMD160 51acd081458003d7f20684332da47ce7788ff1a9 SHA1 9ce59b6a2f580c80600af253073fbaf24ef0c6c2 SHA256 1694623dd0ff83a1782368181dc6181db080c89aee61018253444a48a461e9f6
-DIST libao-0.8.6.tar.gz 387583 RMD160 650258240295f221e95d39cf2380ada73f3cb4e1 SHA1 2050e008ffcfd6803e2c2c03c7d5f469b6d8379e SHA256 99565c6f8a560abc24bf6c07726737d54db64daae08c8708fc9e8f3aeb723985
 DIST libao-0.8.8.tar.gz 405619 RMD160 50b9f1e8c22e59ba9fa3d8e635509b8a4a528974 SHA1 d6e867bbfc4361346db8e505c51271e4162ae7c4 SHA256 e52e05af6b10f42d2ee9845df1a581bf2b352060eabf7946aee0a600c3878954
-DIST libao-patches-4.tar.bz2 3049 RMD160 b6e8cc8495009a593f49c8d67c26f2d2b09ce119 SHA1 44553eeb92d2e681306547565597886bda2f0044 SHA256 fd913474cefc07528e6e45b24d2e5198ebe6b5d9dc763f4aa03d2e1802dec1d8
-EBUILD libao-0.8.6-r3.ebuild 1430 RMD160 fdb4f227d92989e259dc737b0c53e60e814ec96c SHA1 44edd8111a9972bb436a1878d6666707a4723a35 SHA256 0cbd7baf53886410e8dae8e6051dc515be0cbd8bb0a403cd1ec7e348546cb69c
-EBUILD libao-0.8.8.ebuild 1352 RMD160 d52bd2c06b4d55eae81c4811f97dff6211d9ac29 SHA1 ecba61a3591cc0c81b4759aabec1a9038c458112 SHA256 79b64bb5226da5ef6ea7470df7f5f1bb84c24e427c81ef11174737219ac26584
-MISC ChangeLog 11382 RMD160 35cb5d2bd864d5b4719a514808eb095c188cee6b SHA1 c8ae1c14005f634d0c2187eb376f21a9ab41fafd SHA256 b574cd057289dfcfc83954605112727bbb22369fd2bd4a0f9992405d481c65dd
+EBUILD libao-0.8.8.ebuild 1328 RMD160 d2fe50d6dd448e32cb7fa1e511534857691f8174 SHA1 9c1e3bd80ca558f2a404b47b41417d459a13e03c SHA256 494eff611ee0bb265439fe977934a744aa63575842c814e44f6b2fb60a3ae9d4
+MISC ChangeLog 11496 RMD160 9f39208f7de733db40f85b53bfc5ed944305c3b1 SHA1 b6137246e8fbfda6385ddc330952118da9e80887 SHA256 a925f5301fa4da9d61a532d96e7fee68db642a88a431f867fd106af5d6899462
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
