@@ -1,8 +1,9 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libao/libao-0.8.8.ebuild,v 1.8 2008/05/26 15:30:46 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libao/libao-0.8.8.ebuild,v 1.9 2009/06/01 14:31:23 ssuominen Exp $
 
-inherit eutils autotools
+EAPI=2
+inherit eutils libtool autotools
 
 DESCRIPTION="the audio output library"
 HOMEPAGE="http://www.xiph.org/ao"
@@ -11,7 +12,7 @@ SRC_URI="http://downloads.xiph.org/releases/ao/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~x86-interix ~amd64-linux ~ppc-macos ~x86-macos ~x86-solaris"
-IUSE="alsa arts doc esd nas mmap pulseaudio"
+IUSE="alsa doc nas mmap pulseaudio"
 
 RDEPEND="alsa? ( media-libs/alsa-lib )
 	arts? ( kde-base/arts )
@@ -19,22 +20,22 @@ RDEPEND="alsa? ( media-libs/alsa-lib )
 	nas? ( media-libs/nas )
 	pulseaudio? ( media-sound/pulseaudio )"
 DEPEND="${RDEPEND}
-	dev-util/pkgconfig
-	!media-plugins/libao-pulse"
+	dev-util/pkgconfig"
 
-src_unpack() {
-	unpack ${A}
-	cd "${S}"
+src_prepare() {
 	epatch "${FILESDIR}"/${P}-alsa09-buffertime-milliseconds.patch
+	elibtoolize
 	eautoreconf # need new libtool for interix
 }
 
-src_compile() {
-	econf --enable-shared --enable-static \
+src_configure() {
+	econf \
+		--enable-shared \
+		--disable-static \
 		$(use_enable alsa alsa09) \
 		$(use_enable mmap alsa09-mmap) \
-		$(use_enable arts) \
-		$(use_enable esd) \
+		--disable-arts \
+		--disable-esd \
 		$(use_enable nas) \
 		$(use_enable pulseaudio pulse)
 	emake || die "emake failed."
