@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libao
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libao/ChangeLog,v 1.82 2008/05/26 15:30:46 drac Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libao/ChangeLog,v 1.83 2009/06/01 14:31:23 ssuominen Exp $
+
+  01 Jun 2009; Samuli Suominen <ssuominen@gentoo.org> libao-0.8.8.ebuild:
+  Remove arts and esound support.
 
   26 May 2008; Samuli Suominen <drac@gentoo.org> libao-0.8.6-r3.ebuild,
   libao-0.8.8.ebuild:
